--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -1,3 +1,14 @@
 body {
-    background: #C9C9C9;
+    background: #000000;
+}
+
+label.form__label {
+    color: #FFF;
+    margin-bottom: 5px;
+    font-size: 0.9rem;
+    font-weight: bold;
+}
+
+input {
+    margin-bottom: 20px;
 }
