did login and signup designs

--- a/client/styles/form.scss
+++ b/client/styles/form.scss
@@ -16,14 +16,13 @@
 }
 
 .form_heading {
-    color: #FFF;
+    color: #FFFFFF;
     align-self: flex-start;
     font-weight: bolder;
     font-size: 1.4rem;
     margin-bottom: 25px;
     padding: 5px 0px;
-    border-bottom: 3px solid rgb(168, 85, 247);
-    width: 4.6rem;
+    font-family: ITC_AVANT_BOLD;
 }
 
 .form__title {
