--- a/client/styles/login.module.css
+++ b/client/styles/login.module.css
@@ -4,10 +4,12 @@
 
 .main {
   min-height: 100vh;
+  min-width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background: #000000;
 }
 
 .wrap {
