worked on login functionality

--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -3,7 +3,11 @@
 $primaryBackground: #000000;
 $primaryButton: rgb(168, 85, 247);
 $textLightColor: #FEFEFE;
+$textLightError: #FFB1A3;
 $textDarkColor: #000000;
 $textFont: ITC_AVANT, 'sans-serif';
 $textSizeSm: 0.9rem;
 $textSizeXs: 0.8rem;
+$font: ITC_AVANT;
+$fontDemi:  ITC_AVANT_DEMI;
+$fontBold:  ITC_AVANT_BOLD;
