--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -25,6 +25,15 @@ input {
 
 button {
   font-family: $fontDemi;
+  @media (max-width: 800px) {
+    font-size: 0.9rem;
+  }
+  @media (max-width: 500px) {
+    font-size: 0.85rem;
+  }
+  @media (max-width: 400px) {
+    font-size: 0.8rem;
+  }
 }
 
 label.form__label {
@@ -33,6 +42,15 @@ label.form__label {
   font-size: 1rem;
   font-weight: bold;
   font-family: $fontDemi;
+  @media (max-width: 800px) {
+    font-size: 0.9rem;
+  }
+  @media (max-width: 500px) {
+    font-size: 0.85rem;
+  }
+  @media (max-width: 400px) {
+    font-size: 0.8rem;
+  }
 }
 
 .sidebar  {
@@ -103,4 +121,13 @@ label.form__label {
   margin-top: 15px;
   text-align: center;
   font-family: $fontDemi;
+  @media (max-width: 800px) {
+    font-size: 0.9rem;
+  }
+  @media (max-width: 500px) {
+    font-size: 0.85rem;
+  }
+  @media (max-width: 400px) {
+    font-size: 0.8rem;
+  }
 }
