added transaction components

--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -11,3 +11,4 @@ $textSizeXs: 0.8rem;
 $font: ITC_AVANT;
 $fontDemi:  ITC_AVANT_DEMI;
 $fontBold:  ITC_AVANT_BOLD;
+$bodyWrapHeight: calc(94.5vh - 15px);
