--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -3,7 +3,8 @@
 @tailwind utilities;
 @import '_variables';
 
-html, body {
+html,
+body {
   padding: 0;
   margin: 0;
   font-family: $font;
@@ -37,7 +38,7 @@ button {
 }
 
 label.form__label {
-  color: #FFF;
+  color: #FFFF;
   margin-bottom: 5px;
   font-size: 1rem;
   font-weight: bold;
@@ -53,7 +54,7 @@ label.form__label {
   }
 }
 
-.sidebar  {
+.sidebar {
   width: 18vw;
   background-color: #000000;
   position: absolute;
@@ -79,11 +80,16 @@ label.form__label {
         width: 100%;
       }
     }
+
+    li.activeLink a {
+      background-color: #FEFEFE;
+      color: #000000;
+    }
   }
 }
 
 .topbar {
-  height: calc(5.5vh) ;
+  height: calc(5.5vh);
   width: 82vw;
   margin-left: 18vw;
   border-bottom: 0.7px solid #c3c3c3;
@@ -108,7 +114,7 @@ label.form__label {
   width: 82vw;
   margin-left: 18vw;
   background: $textLightColor;
-  max-height: calc(94.5vh - 15px);
+  max-height: $bodyWrapHeight;
   overflow-y: scroll;
   padding: 20px 25px;
 
@@ -139,5 +145,98 @@ label.form__label {
   }
   @media (max-width: 400px) {
     font-size: 0.8rem;
+  }
+}
+
+.loader-wrap {
+  display: flex;
+  align-items: center;
+  min-height: $bodyWrapHeight;
+  justify-content: center;
+
+  .lds-roller {
+    display: inline-block;
+    position: relative;
+    width: 95px;
+    height: 95px;
+    text-align: center;
+  }
+  .lds-roller div {
+    animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    transform-origin: 40px 40px;
+  }
+  .lds-roller div:after {
+    content: ' ';
+    display: block;
+    position: absolute;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    background: #000000;
+    margin: -4px 0 0 -4px;
+  }
+  .lds-roller div:nth-child(1) {
+    animation-delay: -0.036s;
+  }
+  .lds-roller div:nth-child(1):after {
+    top: 63px;
+    left: 63px;
+  }
+  .lds-roller div:nth-child(2) {
+    animation-delay: -0.072s;
+  }
+  .lds-roller div:nth-child(2):after {
+    top: 68px;
+    left: 56px;
+  }
+  .lds-roller div:nth-child(3) {
+    animation-delay: -0.108s;
+  }
+  .lds-roller div:nth-child(3):after {
+    top: 71px;
+    left: 48px;
+  }
+  .lds-roller div:nth-child(4) {
+    animation-delay: -0.144s;
+  }
+  .lds-roller div:nth-child(4):after {
+    top: 72px;
+    left: 40px;
+  }
+  .lds-roller div:nth-child(5) {
+    animation-delay: -0.18s;
+  }
+  .lds-roller div:nth-child(5):after {
+    top: 71px;
+    left: 32px;
+  }
+  .lds-roller div:nth-child(6) {
+    animation-delay: -0.216s;
+  }
+  .lds-roller div:nth-child(6):after {
+    top: 68px;
+    left: 24px;
+  }
+  .lds-roller div:nth-child(7) {
+    animation-delay: -0.252s;
+  }
+  .lds-roller div:nth-child(7):after {
+    top: 63px;
+    left: 17px;
+  }
+  .lds-roller div:nth-child(8) {
+    animation-delay: -0.288s;
+  }
+  .lds-roller div:nth-child(8):after {
+    top: 56px;
+    left: 12px;
+  }
+  @keyframes lds-roller {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
   }
 }
