added mobile nav

--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -12,3 +12,4 @@ $font: ITC_AVANT;
 $fontDemi:  ITC_AVANT_DEMI;
 $fontBold:  ITC_AVANT_BOLD;
 $bodyWrapHeight: calc(94.5vh - 15px);
+$bodyMobileWrapHeight: calc(93vh - 15px);
