added description on the fontend index page

--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -6,6 +6,7 @@ $textLightColor: #FEFEFE;
 $textLightError: #FFB1A3;
 $textDarkColor: #000000;
 $textFont: ITC_AVANT, 'sans-serif';
+$textSizeMd: 1.2rem;
 $textSizeSm: 0.9rem;
 $textSizeXs: 0.8rem;
 $font: ITC_AVANT;
